--- a/templates/index.html
+++ b/templates/index.html
@@ -25,8 +25,7 @@
     <button onclick="callFunction('function1')">How many lines</button>
     <button onclick="callFunction('traditional_models')">Traditional methods</button>
     <button onclick="callFunction('ml_models')">Machine Learning models</button>
-    <button onclick="callFunction('function4')">Hybrid methods</button>
-    <button onclick="callFunction('function5')">All methods</button>
+    <button onclick="callFunction('naive_methods')">Naive methods</button>
     
     <br><br>
     <!-- Modal -->
