--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Website</title>
+    <link rel="stylesheet" href="static/css/styles.css">
 </head>
 <body>
     <h1>Traditional vs ML methods in Timeseries Forecasting</h1>
@@ -28,16 +29,17 @@
     <button onclick="callFunction('naive_methods')">Naive methods</button>
     
     <br><br>
-    <!-- Modal -->
+    <!-- Model Help Modal -->
     <button class="button open-button">Read More</button>
     <dialog class="modal", id="modal">
         <h2>The models</h2>
         <h3>Traditional</h3>
         <p>ARIMA</p>
-        <h3>ML</h3>
-        <p>Machine Learning Models</p>
-        <h3>Hybrid</h3>
-        <p>Hybrid Models</p>
+        <p>Theta</p>
+        <p>ETS - Exponential Smoothing</p>
+        <h3>Machine Learning Models</h3>
+        <p>Prophet</p>
+        <p>LightGBM</p>
         <button class="button close-button">Close</button>
     </dialog>
     
