initial branch commit

--- a/templates/index.html
+++ b/templates/index.html
@@ -25,9 +25,9 @@
     <h3 class="Model_title">Experiment</h3>
     <div id="Model_buttons">
     <button class='model' id='model_button' onclick="callFunction('function1')">How many lines</button>
-    <button class='model' id='model_button' onclick="callFunction('traditional_models')">Traditional methods</button>
-    <button class='model' id='model_button' onclick="callFunction('ml_models')">Machine Learning models</button>
-    <button class='model' id='model_button' onclick="callFunction('naive_methods')">Naive methods</button>
+    <button class='model' id='model_button' title = 'Naive Methods:&#013- Mean&#013- Last Value&#013- Random Walk' onclick="callFunction('naive_methods')">Naive methods</button>
+    <button class='model' id='model_button' title = 'Traditional Models:&#013- ARIMA&#013- Theta model' onclick="callFunction('traditional_models')">Traditional methods</button>
+    <button class='model' id='model_button' title = 'Machine Learning Models: &#013- Prophet&#013- Light GBM' onclick="callFunction('ml_models')">Machine Learning models</button>
     </div>
 
     <br><br>
