added new metrics

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
 
     <h3 class="Model_title">Experiment</h3>
     <div id="Model_buttons">
-    <button class='model' id='model_button' onclick="callFunction('function1')">How many lines</button>
+    <button class='model' id='model_button' onclick="callFunction('function1')">Testing</button>
     <button class='model' id='model_button' onclick="callFunction('traditional_models')">Traditional methods</button>
     <button class='model' id='model_button' onclick="callFunction('ml_models')">Machine Learning models</button>
     <button class='model' id='model_button' onclick="callFunction('naive_methods')">Naive methods</button>
