--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -66,7 +66,8 @@ hr {
 }
 
 #result {
-  margin-left: 25%;
-  margin-right: 25%;
+  margin-left: 10%;
+  margin-right: 10%;
+  content: center;
 }
 
