--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -7,7 +7,7 @@ h1 {
     font-size: 35px;
     font-style: bold;
     /* Align text to the middle */
-    text-align: center;
+    text-align: left;
     padding-left: 25%;
     padding-right: 25%;
   }
@@ -18,7 +18,7 @@ h2 {
     font-size: 18px;
     font-style: italic;
     /* Align text to the middle */
-    text-align: center;
+    text-align: left;
     padding-left: 25%;
     padding-right: 25%;
   }
@@ -39,6 +39,15 @@ button {
 }
 
 button.model {
+  margin-left: 2px;
+  margin-right: 2px;
+}
+
+#Nav_bar {
+  padding-left: 25%;
+}
+
+button.nav-bar-button{
   margin-left: 2px;
   margin-right: 2px;
 }
