Output file and export

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -74,6 +74,11 @@ hr {
   margin-right: 25%;
 }
 
+#export {
+  margin-left: 25%;
+  margin-right: 25%;
+}
+
 #result {
   margin-left: 10%;
   margin-right: 10%;
