--- a/templates/index.html
+++ b/templates/index.html
@@ -27,6 +27,26 @@
     <div id="upload-status"></div>
     
     <br><br>
+    
+    <form id="sliderForm">
+        <p><span id="slider_1_value">Slider 1: </span></p>
+        <input type="range" id="slider1" class="config_slider" name="slider1" min="0" max="10" step="1" value="0" oninput="updateSliders()">
+        <br>
+
+        <p><span id="slider_2_value">Slider 2: </span></p>
+        <input type="range" id="slider2" class="config_slider" name="slider2" min="0" max="10" step="1" value="0" oninput="updateSliders()">
+        <!-- <br> -->
+
+        <p><span id="slider_3_value">Slider 3: </span></p>
+        <input type="range" id="slider3" class="config_slider" name="slider3" min="0" max="10" step="1" value="0" oninput="updateSliders()">
+        <!-- <br> -->
+
+
+        <p>Total: <span id="total">0</span></p>
+        <input type="submit" value="Submit">
+    </form>
+
+    <br><br>
 
     <h3 class="Model_title">Experiment</h3>
     <div id="Model_buttons">
@@ -83,6 +103,44 @@
         document.getElementById("Report_nav_button").onclick = function () {
             location.href = "{{ url_for('report') }}";
         };
+    </script>
+
+    <!-- Controlling sliders  -->
+    <script>
+        function updateSliders() {
+            var slider1 = parseInt(document.getElementById("slider1").value);
+            var slider2 = parseInt(document.getElementById("slider2").value);
+            var slider3 = parseInt(document.getElementById("slider3").value);
+
+            var total = slider1 + slider2 + slider3;
+
+            document.getElementById("slider_1_value").innerText = "Slider 1: "  + slider1;
+            document.getElementById("slider_2_value").innerText = "Slider 2: "  + slider2;
+            document.getElementById("slider_3_value").innerText = "Slider 3: "  + slider3;
+
+            // if (total > 10) {
+            //     // Adjust sliders to ensure the total is not more than 10
+            //     var excess = total - 10;
+            //     var maxSliderValue = Math.max(slider1, slider2, slider3);
+
+            //     if (maxSliderValue === slider1) {
+            //         document.getElementById("slider1").value -= excess;
+            //     } else if (maxSliderValue === slider2) {
+            //         document.getElementById("slider2").value -= excess;
+            //     } else {
+            //         document.getElementById("slider3").value -= excess;
+            //     }
+
+            //     // Update total after adjustment
+            //     total = 10;
+            // }
+            if (total > 10){
+                document.getElementById("total").innerText = total + " !";
+            }
+            else {
+                document.getElementById("total").innerText = total;
+            }
+        }
     </script>
 
     <script>
