--- a/templates/index.html
+++ b/templates/index.html
@@ -57,7 +57,7 @@
     </div>
 
     <br><br>
-    <!-- Model Help Modal -->
+    <!-- Help Modal -->
     <button class="button open-button" id="hover-element">Read More</button>
     <dialog class="modal", id="modal">
         <h2>The models</h2>
