how to use it on about page and new way of saving static text

--- a/templates/report.html
+++ b/templates/report.html
@@ -7,15 +7,16 @@
     <link rel="stylesheet" href="static/css/styles.css">
 </head>
 <body>
-    <h1>About</h1>
-    <h2>This is the about page</h2>
-    <h3>Hi from about!</h3>
-    <div id="Nav_bar">
-    <button class="nav-bar-button" id="Home_nav_button">Home</button>
-    <button class="nav-bar-button" id="About_nav_button">About</button>
-    <button class="nav-bar-button" id="Report_nav_button">Report</button>
+    <div class="section-wrapper" id="Heading">
+        <h1>Report</h1>
+        <h2>This is the report page</h2>
+        <div id="Nav_bar">
+        <button class="nav-bar-button" id="Home_nav_button">Home</button>
+        <button class="nav-bar-button" id="About_nav_button">About</button>
+        <button class="nav-bar-button" id="Report_nav_button">Report</button>
+        </div>
+        <hr>
     </div>
-    <hr>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
