--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -8,8 +8,6 @@ h1 {
     font-style: bold;
     /* Align text to the middle */
     text-align: left;
-    padding-left: 25%;
-    padding-right: 25%;
   }
   
 h2 {
@@ -19,8 +17,6 @@ h2 {
     font-style: italic;
     /* Align text to the middle */
     text-align: left;
-    padding-left: 25%;
-    padding-right: 25%;
   }
 
 h3 {
@@ -28,8 +24,6 @@ h3 {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 16px;
     font-style: normal;
-    padding-left: 25%;
-    padding-right: 25%;
   }
 
 
@@ -41,8 +35,7 @@ p {
     text-align: left;
   }
 
-
-button {
+.section-wrapper{
   margin-left: 25%;
   margin-right: 25%;
 }
@@ -62,12 +55,7 @@ input.config_slider {
 }
 
 #Nav_bar {
-  padding-left: 25%;
-}
-
-#Upload_dataset {
-  margin-left: 25%;
-  margin-right: 25%;
+  align-content: center;
 }
 
 button.nav-bar-button{
@@ -75,36 +63,13 @@ button.nav-bar-button{
   margin-right: 2px;
 }
 
-#Model_buttons {
-  padding-left: 25%;
-}
-
 #upload-status {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 16px;
   padding-top: 0.5%;
-  padding-left: 25%;
-  padding-right: 25%;
-}
-
-form {
-  margin-left: 25%;
-  margin-right: 25%;
-}
-
-hr {
-  margin-left: 25%;
-  margin-right: 25%;
-}
-
-#export {
-  margin-left: 25%;
-  margin-right: 25%;
 }
 
 #result {
-  margin-left: 10%;
-  margin-right: 10%;
   text-align: center;
 }
 
