--- a/templates/about.html
+++ b/templates/about.html
@@ -7,28 +7,34 @@
     <link rel="stylesheet" href="static/css/styles.css">
 </head>
 <body>
-    <h1>About</h1>
-    <h2>This is the about page</h2>
-    <div id="Nav_bar">
-    <button class="nav-bar-button" id="Home_nav_button">Home</button>
-    <button class="nav-bar-button" id="About_nav_button">About</button>
-    <button class="nav-bar-button" id="Report_nav_button">Report</button>
+    <div class="section-wrapper" id="Heading">
+        <h1>About</h1>
+        <h2>This is the about page</h2>
+        <div id="Nav_bar">
+        <button class="nav-bar-button" id="Home_nav_button">Home</button>
+        <button class="nav-bar-button" id="About_nav_button">About</button>
+        <button class="nav-bar-button" id="Report_nav_button">Report</button>
+        </div>
+        <hr>
     </div>
 
-    <hr>
-
     <!-- <dialog class="modal", id="modal"> -->
-    <div id="Upload_dataset">
-    <h1>Uploading your dataset</h1>
-    <h2>Format</h2>
-    <p>Make sure that your file is in .csv format and delimited via comma ','</p>
-    <h2>Sample</h2>
-    <p id="Dataset_sample"></p>
-    <h2>Timestamp format</h2>
-    <p>dd-mm-yy hh:mm</p>
-    <p>e.g. 01-01-80 18:00 is the 1st of January 1980</p>
-        <!-- <button class="button close-button">Close</button> -->
-    <!-- </dialog> -->
+    <div class="section-wrapper" id="dataset_requirements">
+        <h1>Dataset requirements</h1>
+        <h2>Format</h2>
+        <p>Make sure that your file is in .csv format and delimited via comma ','</p>
+        <h2>Sample</h2>
+        <p id="Dataset_sample"></p>
+        <h2>Timestamp format</h2>
+        <p>dd-mm-yy hh:mm</p>
+        <p>e.g. 01-01-80 18:00 is the 1st of January 1980</p>
+            <!-- <button class="button close-button">Close</button> -->
+        <!-- </dialog> -->
+        <hr>
+    </div>
+
+    <div class="section-wrapper" id="using_the_playground">
+        
     </div>
 
 
@@ -50,11 +56,18 @@
     </script>
 
     <script>
-        fetch("static/dataset_sample.txt")
+        fetch("static/Dataset_sample.txt")
         .then(response => response.text())
         .then(data => {
             // Set the title attribute using the fetched data
             document.getElementById('Dataset_sample').innerHTML = '<pre>' + data + '</pre>';
+        })
+
+        fetch("static/using the playground.txt")
+        .then(response => response.text())
+        .then(data => {
+            // Set the title attribute using the fetched data
+            document.getElementById('using_the_playground').innerHTML = data;
         })
 
 
