--- a/templates/index.html
+++ b/templates/index.html
@@ -87,7 +87,7 @@
     <div class="section-wrapper" id="export"></div>
     <br><br>
     
-    <div class="section-wrapper" id="result">
+    <div class="result-wrapper" id="result">
         <hr>
     </div>
 
